packages/api/.turbo/turbo-dev.log

> api@1.0.0 dev /home/isac/Documents/projetos/FinancialManagement/packages/api
> tsx watch src/index.ts

API listening on 4000
[90m09:47:09[39m [96m[tsx][39m [95mchange[39m in [92m./src/user/routers/userRoutes.ts[39m [33mRestarting...[39m
cAPI listening on 4000
[90m09:47:30[39m [96m[tsx][39m [95mchange[39m in [92m./src/user/routers/userRoutes.ts[39m [33mRestarting...[39m
cAPI listening on 4000
{ user: [32m'isac.chuab@eduzz.com.br'[39m, password: [32m'sdf'[39m }
[90m09:58:11[39m [96m[tsx][39m [95munlink[39m in [92m./src/user/routers/userRoutes.ts[39m [33mRestarting...[39m
c
node:internal/modules/run_main:123
    triggerUncaughtException(
    ^
Error [ERR_MODULE_NOT_FOUND]: Cannot find module '/home/isac/Documents/projetos/FinancialManagement/packages/api/src/user/routers/userRoutes.js' imported from /home/isac/Documents/projetos/FinancialManagement/packages/api/src/AppRoutes/index.ts
[90m    at finalizeResolution (node:internal/modules/esm/resolve:274:11)[39m
[90m    at moduleResolve (node:internal/modules/esm/resolve:859:10)[39m
[90m    at defaultResolve (node:internal/modules/esm/resolve:983:11)[39m
[90m    at nextResolve (node:internal/modules/esm/hooks:748:28)[39m
    at resolveBase (file:///home/isac/Documents/projetos/FinancialManagement/node_modules/[4m.pnpm[24m/tsx@4.20.6/node_modules/[4mtsx[24m/dist/esm/index.mjs?1762433891899:2:3744)
    at async resolveDirectory (file:///home/isac/Documents/projetos/FinancialManagement/node_modules/[4m.pnpm[24m/tsx@4.20.6/node_modules/[4mtsx[24m/dist/esm/index.mjs?1762433891899:2:4237)
    at async resolve (file:///home/isac/Documents/projetos/FinancialManagement/node_modules/[4m.pnpm[24m/tsx@4.20.6/node_modules/[4mtsx[24m/dist/esm/index.mjs?1762433891899:2:5355)
[90m    at async nextResolve (node:internal/modules/esm/hooks:748:22)[39m
[90m    at async Hooks.resolve (node:internal/modules/esm/hooks:240:24)[39m
[90m    at async handleMessage (node:internal/modules/esm/worker:199:18)[39m {
  code: [32m'ERR_MODULE_NOT_FOUND'[39m,
  url: [32m'file:///home/isac/Documents/projetos/FinancialManagement/packages/api/src/user/routers/userRoutes.js'[39m
}

Node.js v22.20.0
[90m09:58:44[39m [96m[tsx][39m [95mchange[39m in [92m./src/AppRoutes/index.ts[39m [33mRerunning...[39m
cAPI listening on 4000
[90m10:02:45[39m [96m[tsx][39m [95mchange[39m in [92m./src/user/userRoutes.ts[39m [33mRestarting...[39m
c/home/isac/Documents/projetos/FinancialManagement/packages/api/src/user/userRoutes.ts:7
    .validate(newUserValidator)
     ^


TypeError: trpc.procedure.input(...).validate is not a function
    at <anonymous> [90m(/home/isac/Documents/projetos/FinancialManagement/packages/api/[39msrc/user/userRoutes.ts:7:6[90m)[39m
[90m    at ModuleJob.run (node:internal/modules/esm/module_job:345:25)[39m
[90m    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:26)[39m
[90m    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)[39m

Node.js v22.20.0
[90m10:03:18[39m [96m[tsx][39m [95mchange[39m in [92m./src/user/userRoutes.ts[39m [33mRerunning...[39m
cAPI listening on 4000
[90m10:05:01[39m [96m[tsx][39m [95mchange[39m in [92m./src/user/userValidators.ts[39m [33mRestarting...[39m
cAPI listening on 4000
[90m10:05:37[39m [96m[tsx][39m [95mchange[39m in [92m./src/user/userRoutes.ts[39m [33mRestarting...[39m
cAPI listening on 4000
[90m10:08:09[39m [96m[tsx][39m [95mchange[39m in [92m./src/user/userValidators.ts[39m [33mRestarting...[39m
cAPI listening on 4000
[90m10:08:26[39m [96m[tsx][39m [95mchange[39m in [92m./src/user/userValidators.ts[39m [33mRestarting...[39m
c/home/isac/Documents/projetos/FinancialManagement/packages/api/src/user/userRoutes.ts:2
import { newUserValidator } from './userValidators.js';
         ^

SyntaxError: The requested module './userValidators.js' does not provide an export named 'newUserValidator'
[90m    at ModuleJob._instantiate (node:internal/modules/esm/module_job:228:21)[39m
[90m    at async ModuleJob.run (node:internal/modules/esm/module_job:337:5)[39m
[90m    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:26)[39m
[90m    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)[39m

Node.js v22.20.0
[90m10:08:38[39m [96m[tsx][39m [95mchange[39m in [92m./src/user/userRoutes.ts[39m [33mRerunning...[39m
c/home/isac/Documents/projetos/FinancialManagement/packages/api/src/user/userRoutes.ts:5
  newUser: trpc.procedure.input(newUserValidator).mutation(({ input }) => {
                                ^


ReferenceError: newUserValidator is not defined
    at <anonymous> [90m(/home/isac/Documents/projetos/FinancialManagement/packages/api/[39msrc/user/userRoutes.ts:5:33[90m)[39m
[90m    at ModuleJob.run (node:internal/modules/esm/module_job:345:25)[39m
[90m    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:26)[39m
[90m    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)[39m

Node.js v22.20.0
[90m10:08:42[39m [96m[tsx][39m [95mchange[39m in [92m./src/user/userRoutes.ts[39m [33mRerunning...[39m
cAPI listening on 4000
[90m10:14:44[39m [96m[tsx][39m [95mchange[39m in [92m./src/user/userValidators.ts[39m [33mRestarting...[39m
cAPI listening on 4000
{ userEmail: [32m'isachuab@gmail.com'[39m, password: [32m'sdf'[39m }
